# To-Do-List

./: app.py  compose.yaml  pyproject.toml
.zed/: settings.json
migrations/versions/: 9a9f2886553f_added_users_table.py  eed411c0785e_added_to_do_list_table.py
src/: dockerfile  gunicorn.sh  gunicorn_config.py  pyproject_prod.toml
src/app/: __init__.py  config.py  models.py
src/app/routes/index/: index.py
src/app/routes/index/templates/: index.html
src/app/routes/list/: list_item.py
src/app/routes/list/templates/: add_edit_list_item.html  list.html
src/app/routes/users/: users.py
src/app/routes/users/templates/: add_edit_user.html  users.html
src/app/templates/: base.html
src/app/templates/partials/: _navbar.html
